Nuevos cambios, se completaron las clases